--- a/index.html
+++ b/index.html
@@ -4,13 +4,44 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Instagram Clone</title>
-    <!-- don't forget to link your styles -->
+    <link rel="stylesheet" href="styles/style.css">
   </head>
   <body>
-    Instagram Capture and Share the World's Moments Instagram is a fast, beautiful and fun way to share your life with
-    friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram
-    &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    Oh yeah, did we mention it's free? Download on the App Store Get it on Google Play About Us Support Blog Press API
-    Jobs Privacy Terms &copy; 2014 Instagram
+    <div class="container-blue">
+    <div class="left-panel">
+      <div class="iphone">
+        <img src="images/phones.png" alt="phones">
+      </div>
+    </div>
+    <div class="right-panel">
+      <img src="images/brand.png" alt="Instagram">
+      <button class="login-button"><img src="images/home.png"> Log in</button>
+    </div>  
+    </div>
+    <div class="content"> 
+      <h3>Capture and Share the World's Moments</h3>
+      <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family. Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook,
+        Twitter, Tumblr and more. It's a new way to see the world. Oh yeah, did we mention it's free? </p>
+        <div class="badge">
+          <img class="badge-android" src="./images/badge-android.png" alt="android">
+          <img class="badge-iphone" src="./images/badge-iphone.png" alt="iphone">
+        </div>
+    </div>
+    <div class="container-white">
+    </div> 
+    <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li class="copy-footer">&copy; 2014 Instagram</li>
+      </ul>
+      
+    </footer> 
   </body>
 </html>
